force-app/main/default/objects/Lottery_Application__c/Lottery_Application__c.object-meta.xml
<CustomObject>
    <label>Lottery Application</label>
    <nameField>
        <displayFormat>LA-{0}</displayFormat>
        <label>Lottery Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lottery Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>