force-app/main/default/objects/Lottery_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lottery Applications</relationshipLabel>
    <relationshipName>Lottery_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>