force-app/main/default/objects/Lottery_Application__c/fields/Adjusted_Lottery_Application_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Lottery_Application_Amount__c</fullName>
    <label>Adjusted Lottery Application Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>