force-app/main/default/objects/Lottery_Application__c/fields/Alternate_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate if the Alternate Recipient is different from the recipient on the entity</inlineHelpText>
    <label>Alternate Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lottery Applications (Alternate Recipient)</relationshipLabel>
    <relationshipName>Lottery_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>