force-app/main/default/objects/Lottery_Application__c/fields/App_History__c.field-meta.xml
<CustomField>
    <fullName>App_History__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. Quick list of applications this donor has received over the years, including applications scheduled for the donor to receive in future years</description>
    <inlineHelpText>Quick list of applications this donor has received over the years, including applications scheduled for the donor to receive in future years</inlineHelpText>
    <label>App History</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>