force-app/main/default/objects/Lottery_Application__c/fields/App_Level_Change__c.field-meta.xml
<CustomField>
    <fullName>App_Level_Change__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. Describes the change in the donor&apos;s application level versus the app they had last year.
Drop = Donor had an application last year, but not this year
Higher = Donor has a higher application this year versus what they had last year
Lower = Donor has a lower application level this year versus what they had last year
Same = Donor has the same application this year that they had last year</description>
    <inlineHelpText>Describes the change in the donor&apos;s application level versus the app they had last year.
Drop = Donor had an application last year, but not this year
Higher = Donor has a higher application this year versus what they had last year
Lower = Donor has a lower application level this year versus what they had last year
Same = Donor has the same application this year that they had last year</inlineHelpText>
    <label>App Level Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UP</fullName>
                <label>Higher</label>
            </value>
            <value>
                <fullName>DOWN</fullName>
                <label>Lower</label>
            </value>
            <value>
                <fullName>SAME</fullName>
                <label>Same</label>
            </value>
            <value>
                <fullName>DROP</fullName>
                <label>Drop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>