force-app/main/default/objects/Lottery_Application__c/fields/Apply_Proposed_Lottery_Application__c.field-meta.xml
<CustomField>
    <fullName>Apply_Proposed_Lottery_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For use with Lottery Reporting TASK0198615. This checkbox applies the &quot;Proposed Lottery Application Level&quot; to the donors actual &quot;Lottery Application Level&quot;. When saving this record with this field checked, automation will trigger that change as well as a few other tasks such as saving off the previous app to field &quot;Replaced Lottery Application Level&quot;.</description>
    <inlineHelpText>This checkbox applies the &quot;Proposed Lottery Application Level&quot; to the donors actual &quot;Lottery Application Level&quot;. When saving this record with this field checked, automation will trigger that change as well as a few other tasks such as saving off the previous app to field &quot;Replaced Lottery Application Level&quot;.</inlineHelpText>
    <label>Apply Proposed Lottery Application</label>
    <type>Checkbox</type>
</CustomField>