force-app/main/default/objects/Lottery_Application__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lottery Applications</relationshipLabel>
    <relationshipName>Lottery_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>