force-app/main/default/objects/Lottery_Application__c/fields/Constituent_Institutional_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Institutional_Suffix__c</fullName>
    <formula>Constituent__r.nd_Institutional_Suffix__c</formula>
    <label>Constituent Institutional Suffix</label>
    <type>Text</type>
</CustomField>