force-app/main/default/objects/Lottery_Application__c/fields/Current_Calendar_Year_University_Credit__c.field-meta.xml
<CustomField>
    <fullName>Current_Calendar_Year_University_Credit__c</fullName>
    <description>Lifetime University Credit Amount</description>
    <inlineHelpText>University Credit amount given by this donor for the year this football application will be used for. This will not count directly for the application on this row, but might help make decisions when reviewing apps. The year of giving for this amount is in field &quot;Year of Current Calendar Year Credit&quot;</inlineHelpText>
    <label>Current Calendar Year University Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>