force-app/main/default/objects/Lottery_Application__c/fields/Earned_Application_Audit__c.field-meta.xml
<CustomField>
    <fullName>Earned_Application_Audit__c</fullName>
    <inlineHelpText>Detailed calculation for field &quot;Lottery Application Level&quot;</inlineHelpText>
    <label>Current Earned Application Audit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>