force-app/main/default/objects/Lottery_Application__c/fields/Interim__c.field-meta.xml
<CustomField>
    <fullName>Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Lottery Applications</relationshipLabel>
    <relationshipName>Lottery_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>