force-app/main/default/objects/Lottery_Application__c/fields/Lifetime_University_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_University_Credit_Amount__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. Lifetime &quot;University Credit Amount&quot; given to the university given by this donor.</description>
    <inlineHelpText>Lifetime &quot;University Credit Amount&quot; given to the university given by this donor.</inlineHelpText>
    <label>Lifetime University Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>