force-app/main/default/objects/Lottery_Application__c/fields/locked_for_automated_updates__c.field-meta.xml
<CustomField>
    <fullName>locked_for_automated_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Locked/Unlocked for further automated process updates. Locked means no automated process should change this application, but users can still make changes.</description>
    <inlineHelpText>Locked/Unlocked for further automated process updates. Locked means no automated process should change this application, but users can still make changes.</inlineHelpText>
    <label>Lock</label>
    <type>Checkbox</type>
</CustomField>