force-app/main/default/objects/Lottery_Application__c/fields/Lottery_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Application_Level__c</fullName>
    <label>Lottery Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lottery_Application_Level</valueSetName>
    </valueSet>
</CustomField>