force-app/main/default/objects/Lottery_Application__c/fields/nd_Lottery_Alternate_Recipient__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Alternate_Recipient__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Constituent__c)),
     Constituent__r.nd_Lottery_Alternate_Recipient__r.nd_Name_and_ID__c, 
    IF(
        NOT(ISBLANK(Account__c)),
         Account__r.nd_Lottery_Alternate_Recipient__r.nd_Name_and_ID__c ,
        &quot;No Constituent or Account&quot; 
    )
)</formula>
    <label>Lottery Alternate Recipient</label>
    <type>Text</type>
</CustomField>