force-app/main/default/objects/Lottery_Application__c/fields/nd_Lottery_Always_Review__c.field-meta.xml
<CustomField>
    <fullName>nd_Lottery_Always_Review__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Constituent__c)),
    Constituent__r.nd_Lottery_Always_Review__c,
    IF(
        NOT(ISBLANK(Account__c)),
        Account__r.nd_Lottery_Always_Review__c,
        FALSE 
    )
)</formula>
    <label>Lottery Always Review</label>
    <type>Checkbox</type>
</CustomField>