force-app/main/default/objects/Lottery_Application__c/fields/nd_Minimum_Assigned_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>nd_Minimum_Assigned_Application_Level__c</fullName>
    <description>W-002090</description>
    <label>Minimum Assigned Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lottery_Application_Level</valueSetName>
    </valueSet>
</CustomField>