force-app/main/default/objects/Lottery_Application__c/fields/Organization_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Organization_Donor_ID__c</fullName>
    <formula>Account__r.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Organization Donor ID</label>
    <type>Text</type>
</CustomField>