force-app/main/default/objects/Lottery_Application__c/fields/Outstanding_Pledge_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Pledge_Balance__c</fullName>
    <description>For use with Lottery Reporting TASK0198615</description>
    <label>Outstanding Pledge Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>