force-app/main/default/objects/Lottery_Application__c/fields/Prior_Year_Lottery_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Lottery_Application_Level__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. This is the application the donor had last year for this lottery application group.</description>
    <inlineHelpText>This is the application the donor had last year for this lottery application group.</inlineHelpText>
    <label>Prior Year Lottery Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lottery_Application_Level</valueSetName>
    </valueSet>
</CustomField>