force-app/main/default/objects/Lottery_Application__c/fields/Proposed_Earned_Application_Audit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Earned_Application_Audit__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. This is the detail on how the field &quot;Proposed Lottery Application Level&quot; was calculated.</description>
    <inlineHelpText>This is the detail on how the field &quot;Proposed Lottery Application Level&quot; was calculated.</inlineHelpText>
    <label>Proposed Earned Application Audit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>