force-app/main/default/objects/Lottery_Application__c/fields/Proposed_Lottery_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Lottery_Application_Level__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. This is the application level calculated by the system. It is possible this does not match their currently assigned app in field &quot;Lottery Application Level&quot; because it has not been reviewed yet. During some times of the year, calculated applications are not automatically applied to a donor&apos;s final application level due to requiring a review first.</description>
    <inlineHelpText>This is the application level calculated by the system. It is possible this does not match their currently assigned app in field &quot;Lottery Application Level&quot; because it has not been reviewed yet. During some times of the year, calculated applications are not automatically applied to a donor&apos;s final application level due to requiring a review first.</inlineHelpText>
    <label>Proposed Lottery Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lottery_Application_Level</valueSetName>
    </valueSet>
</CustomField>