force-app/main/default/objects/Lottery_Application__c/fields/Replaced_Lottery_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Lottery_Application_Level__c</fullName>
    <description>For use with Lottery Reporting TASK0198615</description>
    <label>Replaced Lottery Application Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lottery_Application_Level</valueSetName>
    </valueSet>
</CustomField>