force-app/main/default/objects/Lottery_Application__c/fields/Replaced_Lottery_Application_Level_Audit__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Lottery_Application_Level_Audit__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. WWhen a Proposed Lottery Application is moved to the main &quot;Lottery Application Level&quot; Field, the old Lottery Application Audit will be moved here to help track why the app changed.</description>
    <inlineHelpText>When a Proposed Lottery Application is moved to the main &quot;Lottery Application Level&quot; Field, the old Lottery Application Audit will be moved here to help track why the app changed.</inlineHelpText>
    <label>Replaced Lottery Application Level Audit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>