force-app/main/default/objects/Lottery_Application__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the flow Lottery Application Request.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lottery_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>