force-app/main/default/objects/Lottery_Application__c/fields/Rollover_Calculation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Calculation_Detail__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. Detailed report on how the field &quot;Rollover Amount&quot; was calculated</description>
    <inlineHelpText>Detailed report on how the field &quot;Rollover Amount&quot; was calculated</inlineHelpText>
    <label>Rollover Calculation Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>