force-app/main/default/objects/Lottery_Application__c/fields/Spouse_Partner_Significant_Other__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Partner_Significant_Other__c</fullName>
    <formula>IF(ISBLANK( Constituent__r.ucinn_ascendv2__Preferred_Spouse__c ),  Constituent__r.nd_Partner_Significant_Other__r.ucinn_ascendv2__Full_Name_Formula__c , Constituent__r.ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Full_Name_Formula__c)</formula>
    <label>Spouse/Partner/Significant Other</label>
    <type>Text</type>
</CustomField>