force-app/main/default/objects/Lottery_Application__c/fields/Technical_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Comments__c</fullName>
    <label>Technical Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>