force-app/main/default/objects/Lottery_Application__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>App Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>