force-app/main/default/objects/Lottery_Application__c/fields/Year_of_Current_Calendar_Year_Credit_2__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Current_Calendar_Year_Credit_2__c</fullName>
    <description>For use with Lottery Reporting TASK0198615. Year used to calculate the giving in field &quot;Current Calendar Year University Credit -2&quot;</description>
    <inlineHelpText>Year used to calculate the giving in field &quot;Current Calendar Year University Credit -2&quot;</inlineHelpText>
    <label>Year of Current Calendar Year Credit -2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>