force-app/main/default/objects/Lottery_Application__c/validationRules/Length_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_Year</fullName>
    <active>true</active>
    <description>Year must be 4 digits</description>
    <errorConditionFormula>NOT(ISBLANK(Year__c)) &amp;&amp;
NOT(LEN( Year__c ) = 4)</errorConditionFormula>
    <errorMessage>Year must be 4 digits</errorMessage>
</ValidationRule>