force-app/main/default/objects/Lottery_Application__c/validationRules/Verify_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Year</fullName>
    <active>true</active>
    <description>Year must be between 1960 and 2060</description>
    <errorConditionFormula>Year__c &lt; &quot;1960&quot; ||
Year__c &gt; &quot;2060&quot;</errorConditionFormula>
    <errorMessage>Year must be between 1960 and 2060</errorMessage>
</ValidationRule>