force-app/main/default/objects/Lottery_Application__c/listViews/Lottery_Application_Change_Requests.listView-meta.xml
<ListView>
    <fullName>Lottery_Application_Change_Requests</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Request_Reason__c</columns>
    <columns>Requested_Level__c</columns>
    <columns>Request_Notes__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requested_Level__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Lottery Application Change Requests</label>
</ListView>